--- a/app/src/main/res/layout/activity_louncher.xml
+++ b/app/src/main/res/layout/activity_louncher.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/louncer_bg"
     android:gravity="center_vertical"
-    tools:context=".activities.LouncherActivity">
+    tools:context=".activities.LauncherActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="@dimen/launcher_app_icon_size"
-        android:layout_height="@dimen/launcher_app_icon_size"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/launcher_app_icon_margin"
-        android:scaleType="fitXY"
-        android:src="@drawable/appicon" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/appicon"
+        app:layout_constraintBottom_toTopOf="@id/guideline4"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline3"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
@@ -22,32 +24,70 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layoutDirection="rtl"
-        android:layout_marginBottom="@dimen/launcher_version_bottom_margin"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_layout">
+
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/launcher_version_name_text_size"
             android:layout_marginEnd="@dimen/about_version_margin"
-            android:text="@string/build_version_text"/>
+            android:text="@string/build_version_text"
+            android:textSize="@dimen/launcher_version_name_text_size" />
+
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/build_version_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/about_version_margin"
-            android:textSize="@dimen/launcher_version_name_text_size"
-            android:id="@+id/build_version_name"/>
+            android:textSize="@dimen/launcher_version_name_text_size" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-  <androidx.cardview.widget.CardView
-      android:layout_width="@dimen/launcher_card_size"
-      android:layout_height="@dimen/launcher_card_size"
-      app:cardElevation="@dimen/launcher_card_elevation"
-      android:layout_centerInParent="true"
-      app:cardCornerRadius="@dimen/launcher_card_corner_radius">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/fragment_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardCornerRadius="@dimen/launcher_card_corner_radius"
+        app:cardElevation="@dimen/launcher_card_elevation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toStartOf="@id/guideline1"
+        app:layout_constraintStart_toEndOf="@id/guideline2"
+        app:layout_constraintTop_toTopOf="parent">
 
-      <FrameLayout
-          android:id="@+id/louncher_container"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-  </androidx.cardview.widget.CardView>
-</RelativeLayout>
+        <FrameLayout
+            android:id="@+id/louncher_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".88" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".12" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".23"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
