--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,109 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layoutDirection="rtl"
-    android:layout_gravity="start"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.MainActivity"
-    android:id="@+id/drawer_layout">
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <FrameLayout
+        android:id="@+id/main_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_nav_view"
         android:layoutDirection="rtl"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_header_layout"
-        android:background="@drawable/louncer_bg"
-        android:id="@+id/drawer_nav_view"
-        app:menu="@menu/drawer_menu"
-        />
-    <RelativeLayout
-        android:layout_height="match_parent"
-        android:layoutDirection="rtl"
-        android:background="@drawable/louncer_bg"
-        android:layout_width="match_parent">
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:id="@+id/toolbar_layout"
-            android:layout_alignParentTop="true"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            android:layout_gravity="top"
-            >
-            <com.google.android.material.appbar.MaterialToolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/toolbar_v21"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-                android:id="@+id/toolbar">
-                <androidx.appcompat.widget.SearchView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:searchIcon="@drawable/ic_baseline_search_24"
-                    android:id="@+id/search_view"
-                    app:queryHint="@string/search_hint"
-                    app:queryBackground="@drawable/search_query_bg"
-                    android:layout_marginEnd="@dimen/main_search_margin_end"
-                    android:layout_gravity="end"/>
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:id="@+id/drawer_btn"
-                    android:tint="@color/icon_tint"
-                    android:layout_marginStart="5dp"
-                    android:padding="@dimen/main_drawer_icon_padding"
-                    android:src="@drawable/ic_baseline_menu_24"
-                    android:scaleType="fitXY"/>
-            </com.google.android.material.appbar.MaterialToolbar>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <ScrollView
-            android:id="@+id/nested_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_below="@id/toolbar_layout"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/main_nasted_margin">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/passwords_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/main_list_margin" />
-        </ScrollView>
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/notice"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/no_document_notice"
-            android:textAlignment="center"
-            android:textSize="@dimen/main_notice_text_size"
-            android:visibility="visible" />
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_margin="@dimen/main_add_btn_margin"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitXY"
-                app:fabSize="normal"
-                app:fabCustomSize="@dimen/icon_wh"
-                android:src="@drawable/ic_baseline_add_24"
-                android:padding="@dimen/main_drawer_icon_padding"
-                android:tint="@color/icon_tint"/>
-        </FrameLayout>
-    </RelativeLayout>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+        app:menu="@menu/nav_menu"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
