--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
+    android:layoutDirection="rtl"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
@@ -10,22 +12,25 @@
         android:text="@string/sign_notice_txt"
         android:layoutDirection="rtl"
         android:textSize="@dimen/common_text_size"
-        android:layout_gravity="right"
+        android:layout_gravity="center"
         android:layout_margin="@dimen/login_tv_margin"
         android:id="@+id/notice_tv"/>
-    <androidx.appcompat.widget.AppCompatEditText
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/common_text_size"
-        android:drawableRight="@drawable/ic_baseline_key_24"
-        android:layoutDirection="rtl"
-        android:focusableInTouchMode="true"
-        android:gravity="right"
+        app:startIconDrawable="@drawable/ic_baseline_key_24"
         android:hint="@string/password_edit_txt_hint"
-        android:paddingRight="@dimen/login_et_right_padding"
-        android:inputType="textPassword"
-        android:id="@+id/login_password"
-        android:layout_margin="@dimen/login_et_margin"/>
+        android:layout_margin="@dimen/login_et_margin"
+        android:layoutDirection="ltr"
+        app:passwordToggleEnabled="true"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/common_text_size"
+            android:inputType="textPassword"
+            android:id="@+id/login_password"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:textAllCaps="false"
