--- a/app/src/main/res/layout/edit_password_dialog_layout.xml
+++ b/app/src/main/res/layout/edit_password_dialog_layout.xml
@@ -147,5 +147,31 @@
         android:hint="@string/custom_pass_edittext_hint"
         android:enabled="false"
         android:id="@+id/e_custom_password"/>
-
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/save_btn"
+            android:background="@drawable/btn_bg"
+            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
+            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
+            android:textSize="@dimen/common_text_size"
+            android:textColor="@android:color/white"
+            android:text="@string/save_btn_title"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/cancel_button"
+            android:background="@drawable/btn_bg"
+            android:layout_marginHorizontal="@dimen/add_dialog_title_margin"
+            android:layout_marginVertical="@dimen/edit_pass_layout_margin"
+            android:textSize="@dimen/common_text_size"
+            android:textColor="@android:color/white"
+            android:text="@string/cancel_btn_title"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
